# rknmonitor

./: .dockerignore  .env.agent.example  .env.example  .env.xray.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.agent  IMPLEMENTATION_PLAN.md  Makefile  PROJECT_CONTEXT.md  PROJECT_MANIFEST.md  QUICKREF.md  README.md  RUNBOOK.md  docker-compose.agent.public.yml  docker-compose.agent.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
data/: targets.csv
deploy/: README-agent.md  install-agent.sh
docs/: blocking-mechanism-telemetry.md  evidence-based-dns-inference.md
prometheus/: prometheus.yml
scripts/: backup.sh  evaluate.py  generate_synthetic.py  ingest.py  locustfile.py  probe.py
src/rknmon/: db.py  (+3 more)
templates/: dashboard.html  target_detail.html
tests/: test_agent_cli.py  test_agent_config.py  test_agent_invites.py  test_agent_runner.py  test_agents_api.py  test_api.py  test_basic.py  test_blocking_mechanism_telemetry.py  test_classifier.py  test_cleanup.py  test_dashboard_multivantage.py  test_dns_evidence_inference.py  test_dpi_agent.py  test_dpi_vantage.py  test_evaluator_fix.py  test_grafana_agents_dashboard.py  test_grafana_dpi_dashboard.py  test_grafana_operator_dashboards.py  test_multivantage_evaluator.py  test_multivantage_schema.py  test_probes.py  test_reliability_metrics.py  test_scheduler_graceful.py  test_vendor_js.py  test_xray_agent_runner.py  test_xray_agents_api.py  test_xray_docker_flow.py  test_xray_native_protocol_configs.py  test_xray_subscription.py  test_xray_subscription_health.py
(+52 files in other folders)
