[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rknmon"
version = "0.1.0"
description = "RKN Blocks Monitoring"
requires-python = ">=3.12"
dependencies = [
  "aiohttp",
  "aiodns",
  "asyncpg",
  "fastapi",
  "jinja2",
  "prometheus-client",
  "pydantic",
  "pydantic-settings",
  "slowapi",
  "starlette",
  "uvicorn",
]

[project.scripts]
rknmon-agent = "rknmon.agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
