[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rknmon"
version = "0.1.0"
description = "RKN Blocks Monitoring"
requires-python = ">=3.12"
dependencies = [
  "aiohttp",
  "aiodns",
  "apscheduler",
  "asyncpg",
  "fastapi",
  "jinja2",
  "prometheus-client",
  "pydantic",
  "pydantic-settings",
  "slowapi",
  "starlette",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]

[project.scripts]
rknmon-agent = "rknmon.agent.cli:main"
rknmon-admin = "rknmon.admin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
